# OneCompute

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: chief-of-staff.md  dashboard-demo-lead.md  isolation-lead.md  orchestrator-lead.md  trust-rewards-lead.md  worker-agent-lead.md
docs/: Azure_Integration_Plan.md  DESIGN.md  Financial_Impact.md  PRODUCT.md  architecture.md  audit-log.md  azure-routing.md  contracts.md  cosign.md  dashboard-api.md  demo-runbook.md  demo-script.md  deploy.md  design-harness.md  design-toolkit.md  device-attestation.md  device-identity.md  execution-plan.md  fleet-setup.md  foundry-gateway.md  harness.md  idea.md  measurement-pilot.md  mxc-sandbox.md  mxc-validation.md  npu-harvesting.md  partitioning.md  pilot-champion-email.md  pilot-consent.md  pilot-it-sanction.md  pilot-phase0-runbook.md  pilot-plan.md  pilot-security-approval.md  routing-policy.md  soc2-alignment.md  supply-chain.md  work-stealing.md  workloads.md
docs/pitch/: OneCompute-Azure-CISO-Handoff.md  OneCompute-Measurement-Pilot-Consent.md  OneCompute-Threat-Model.md  measurement-pilot-security-review.md  pilot-plan.md  pilot-security-approval.md  soc2-alignment.md
docs/research/: README.md
docs/website/: DESIGN.md  PRODUCT.md
scripts/: build_worker_exe.ps1  business_case.py  cosign_attest.py  cpu_spike.py  demo.py  demo_fleet.py  export_audit.py  generate_provenance.py  generate_sbom.py  install_observer.ps1  measure_report.py  observe_me.ps1  pilot_report.py  smoke.py  submit_jobs.py  worker_entry.py
src/cinematic-dashboard/: README.md  index.html  record.py
src/contracts/: __init__.py  hashing.py  models.py  schema.sql
src/dashboard/: __init__.py  index.html  paths.py
src/dashboard-hardcoded/: index.html
src/isolation/: __init__.py  docker.py  jobobject.py  mxc.py  mxc_policy.py  proof.py  runner.py
src/jobkit/: __init__.py  __main__.py  execute.py
src/measurement/: __init__.py  availability.py  business_case.py  headroom.py
src/orchestrator/: __init__.py  __main__.py  app.py  db.py  mtls_protocol.py  netinfo.py  ratelimit.py  routing_policy.py  scheduler.py  submit.py
src/trust/: __init__.py  attestation.py  challenge.py  cosign.py  metering.py  signing.py  tls.py
src/website/: index.html  video.html
src/worker/: __init__.py  __main__.py  agent.py  capability.py  governor.py  idle.py  measurement_identity.py  profile_lock.py  profiler.py  runner.py  telemetry.py
src/workloads/: __init__.py  ai_batch.py  cpu_fanout.py  eval.py  fractal.py  gpu.py  graph.py  hashcrack.py  infer.py  montecarlo.py  optimize.py  partition.py  submit.py  synth.py
tests/: conftest.py  fake_cosign.py  test_business_case_script.py  test_cosign.py  test_measure_report.py  test_observer_scripts.py  test_provenance.py  test_sbom.py
tests/integration/: test_end_to_end.py  test_full_flow.py
tests/isolation/: fake_wxc_exec.py  test_docker_integration.py  test_host_side.py  test_isolation.py  test_mxc_policy.py  test_mxc_runner.py  test_mxc_validation.py
tests/jobkit/: test_ai_local.py  test_execute.py  test_fractal.py  test_longrun_nonai.py  test_optimize.py  test_render.py  test_synth.py
tests/measurement/: test_availability.py  test_business_case.py  test_headroom.py
tests/orchestrator/: test_approval.py  test_attested_tier.py  test_audit_chain.py  test_auth.py  test_dashboard_api.py  test_device_identity.py  test_disconnect_and_routing.py  test_entrypoint_config.py  test_foundry_gateway.py  test_free_ram_gating.py  test_healthz.py  test_lease_renewal.py  test_lease_requeue.py  test_measurement_dashboard.py  test_mtls_protocol.py  test_netinfo.py  test_operator_read_auth.py  test_persistence.py  test_profile_ingest.py  test_ram_matching.py  test_rate_limit.py  test_register_and_match.py  test_results_credit.py  test_routing_policy.py  test_routing_tier.py  test_submit_auth.py  test_weighted_launch.py  test_work_stealing.py
tests/trust/: test_attestation.py  test_tls.py  test_trust.py  test_trusted_key.py
tests/worker/: test_capability.py  test_governor.py  test_gpu_routing.py  test_idle_gate.py  test_npu.py  (+13 more)
(+39 files in other folders)
