[project]
name = "onecompute"
version = "0.1.0"
description = "Let your compute work when you are not: distributed workloads across an idle PC/GPU fleet."
requires-python = ">=3.11"
# Dependency set borrowed from the CoworkBench repo so OneCompute starts with
# the same working toolbox (HTTP/LLM clients, data + document handling, web API).
dependencies = [
    "anthropic>=0.30.0",
    "azure-identity>=1.25.3",
    # cryptography is the Ed25519 trust root (manifest sign/verify); pin it as a direct,
    # CVE-watched dependency rather than relying on it transitively via azure-identity/msal.
    "cryptography>=44.0.1",
    "fastapi>=0.136.3",
    "matplotlib>=3.8.0",
    "openai>=1.0.0",
    "openpyxl>=3.1.0",
    "pandas>=2.2.0",
    "Pillow>=10.0.0",
    "playwright>=1.40.0",
    "pyarrow>=17.0.0",
    "psutil>=5.9.0",
    "pydantic>=2.0.0",
    "pymupdf>=1.24.0",
    "pypdf>=6.12.2",
    "python-docx>=1.1.0",
    "python-dotenv>=1.0.0",
    "python-pptx>=1.0.0",
    "pyyaml>=6.0",
    "reportlab>=4.0.0",
    "tenacity>=8.0.0",
    "uvicorn>=0.48.0",
]

[project.optional-dependencies]
# Install with: `uv sync --extra dev`
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27.0",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# OneCompute ships several top-level packages under src/. Installing the project
# (editable, via `uv sync`) puts them on the path so the documented entry points
# (`python -m orchestrator` and `python -m worker`) run from any checkout
# without setting PYTHONPATH.
[tool.hatch.build.targets.wheel]
packages = [
    "src/contracts",
    "src/dashboard",
    "src/isolation",
    "src/jobkit",
    "src/measurement",
    "src/orchestrator",
    "src/trust",
    "src/worker",
    "src/workloads",
]

# The dashboard is served as a single self-contained HTML file; ship it with the package.
[tool.hatch.build.targets.wheel.force-include]
"src/dashboard/index.html" = "dashboard/index.html"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"
filterwarnings = [
    "ignore::DeprecationWarning:pydantic.*",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]
ignore = [
    "E501",  # line-length handled by formatter when needed
    "B008",  # FastAPI-style Depends(...) defaults
]
